Fix addressing restrictions